fix: Common style adjustments Adjust spacings, line-heights. Replace ! with an icon in AccuracyIndicator and PositionError.

--- a/src/fonts.css
+++ b/src/fonts.css
@@ -32,11 +32,11 @@
 }
 
 .line-height-m {
-  line-height: 1rem;
+  line-height: 1.15rem;
 }
 
 .line-height-l {
-  line-height: 1.5rem;
+  line-height: 1.3rem;
 }
 
 .line-height-xl {
